vector embeddings changes for upheno